tests/invalid/Array_Invalid_4.whiley
method main():
    int x = 1
    int y = x[0]
